fix z-index of nav

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 nav {
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     width: 100%;
     transition: top 0.3s ease-in-out;
